--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,7 @@ LanguageCode= "en-US"
 Title= "CAUSES & EFFECTS"
 paginate = 10
 DisqusShortname = "jamescampbell"
-Copyright = "All rights reserved © 2016"
+Copyright = "All rights reserved © 2015-2017"
 canonifyurls = true
 theme = "startbootstrap-clean-blog"
 newContentEditor = "nano"
