--- a/config.toml
+++ b/config.toml
@@ -14,6 +14,7 @@ pygmentsStyle = "native"
 [params]
   SiteDescription = "coding advice in Python, software development, and tips related to how to fix bad technology"
   DateForm = "Mon, Jan 2, 2006"
+  updated = ""
   Description = "pushing buttons since 1981"
   Author = "James Campbell"
   email = "james@jamescampbell.us"
